# aea_spot_micro

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: agent.md
logs/PPO_1/: events.out.tfevents.1752958712.cd6db9a8bee4.592.0
logs/PPO_2/: events.out.tfevents.1752958738.cd6db9a8bee4.610.0
logs/PPO_3/: events.out.tfevents.1752999870.cd6db9a8bee4.812.0  events.out.tfevents.1753035829.cd6db9a8bee4.1089.0  events.out.tfevents.1753035857.cd6db9a8bee4.1109.0  events.out.tfevents.1753112442.cd6db9a8bee4.1227.0  events.out.tfevents.1753112464.cd6db9a8bee4.1252.0  events.out.tfevents.1753780324.cd6db9a8bee4.1363.0  events.out.tfevents.1753780377.cd6db9a8bee4.1385.0
policy_training/: Agent.py  Config.py  SpotmicroEnv.py  Terrain.py  Terrain_old.py  World.py  agentConfig.yaml  config.yaml  controller.py  debug.py  envConfig.yaml  reward_function.py  standing_reward_function.py  terrainConfig.yaml  test.py  test_policy.py  tilting_plane_rw_fn.py  train_further.py  train_policy.py  walking_reward_function.py
policy_training/.ipynb_checkpoints/: standing-checkpoint.ipynb
policy_training/policies/: ppo_tilting5.3M
policy_training/states/: debug.pkl  shuffle.pkl  stand.pkl  stand10M-0.pkl  stand10M-1.pkl  stand10M-2.pkl  stand10M-3.pkl  stand2M-1.pkl  stand2M-2.pkl  stand3M-0.pkl  stand3M-1.pkl  stand3M-2.pkl  stand4M-0.pkl  stand4M-1.pkl  stand4M-2.pkl  stand5M-0.pkl  stand_1M-3.pkl  (+24 more)
site/: 404.html  index.html  objects.inv
states/: state2M-2.pkl  statestand2M-2.pkl
training/: test.py  test_policy.py  train_further.py  train_policy.py
(+101 files in other folders)
