[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotmicro"
version = "0.1.0"
description = "Framework and training tools for the SpotMicro quadruped"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your@email.com" }
]
dependencies = [
    "pybullet",
    "numpy",
    "gymnasium",
    "stable-baselines3",
    "catkin_pkg",
    "tensorboard",
    "pyyaml",
    "scipy",
    "notebook",
    "mkdocstrings-python",
    "mkdocstrings",
    "mkdocs-material",
    "mkdocs"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spotmicro = ["data/*.urdf"]
